--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,40 +17,45 @@
         <form action="" method="">
             <div class="container">
                 <div class="col-15">
-                <label for="ID">
-                    <input class="checkbox" type="checkbox" id="ID" name="checkid">ID</label>
+                    <label for="ID">
+                        <input class="checkbox" type="checkbox" id="ID" name="id">ID
+                    </label>
                 </div>
                 <div class="col-85">
                     <input class="rowinput" id="masukkan" type="number" placeholder="ID" name="id">
                 </div>
 
                 <div class="col-15">
-                <label for="String">
-                    <input class="checkbox" type="checkbox" id="String" name="string">String</label>
+                    <label for="String">
+                        <input class="checkbox" type="checkbox" id="String" name="string">String
+                    </label>
                 </div>
                 <div class="col-85">
                     <input class="rowinput" id="masukkan" type="text" placeholder="String" name="string">
                 </div>
 
                 <div class="col-15">
-                <label for="Integer">
-                    <input class="checkbox" type="checkbox" id="Integer" name="integer">Integer</label>
+                    <label for="Integer">
+                        <input class="checkbox" type="checkbox" id="Integer" name="integer">Integer
+                    </label>
                 </div>
                 <div class="col-85">
                     <input class="rowinput" id="masukkan" type="number" placeholder="Integer" name="integer">
                 </div>
 
                 <div class="col-15">
-                <label for="Float">
-                    <input class="checkbox" type="checkbox" id="Float" name="float">Float</label>
+                    <label for="Float">
+                        <input class="checkbox" type="checkbox" id="Float" name="float">Float
+                    </label>
                 </div>
                 <div class="col-85">
                     <input class="rowinput" id="masukkan" step="0.01" type="number" placeholder="Float" name="float">
                 </div>
 
                 <div class="col-15">
-                <label for="Date">
-                    <input class="checkbox" type="checkbox" id="Date" name="date">Date</label>
+                    <label for="Date">
+                        <input class="checkbox" type="checkbox" id="Date" name="date">Date
+                    </label>
                 </div>
                 <div class="col-85">
                     <input class="rowinput2" id="masukkan" type="date" placeholder="start date" name="date">
@@ -91,7 +96,7 @@
                     <tbody>
                         <% data.forEach((item, index) => { %>
                         <tr class="active-row">
-                            <td class="id-styling"><%= index + 1 %></td>
+                            <td class="id-styling"><%= index + 1 + offset%></td>
                             <td><%= item.string %></td>
                             <td><%= item.integer %></td>
                             <td><%= item.float %></td>
@@ -105,13 +110,17 @@
             </form>
         </div>
 
-            <div class="pagination">
-                <a href="#">Previous</a>
-                <a href="#">1</a>
-                <a href="#">2</a>
-                <a href="#">3</a>
-                <a href="#">Next</a>
-            </div>
+        <div class="page pagination">
+            <form action="/" method="GET">
+                <div class="pagination">
+                    <a href="#">Previous</a>
+                    <% for(let i = 1; i <= pages; i++) { %>
+                    <a href="/?page=<%= i %>"><%= i %></a>
+                    <% } %>
+                    <a href="#">Next</a>
+                </div>
+            </form>
+        </div>
 
             <div class="addNew">
                 <a href="/add" class="btn-styling" type="submit">Add</a>
