--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,10 +217,16 @@ select {
     font-weight: bold;
     font-size: 16px;
     cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.pagination a.active{
+    background-color: #009879;
 }
 
 .pagination a:hover:not(.active) {
-    background-color: #ddd;
+    color: #ddd;
+    background-color: #009879;
 }
 
 .pagination a:first-child {
