--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
                     </label>
                 </div>
                 <div class="col-85">
-                    <input class="rowinput" id="masukkan" step="0.01" type="number" placeholder="Float" name="float" value="<%= query.float %>">
+                    <input class="rowinput" id="masukkan" step="any" type="number" placeholder="Float" name="float" value="<%= query.float %>">
                 </div>
 
                 <div class="col-15">
@@ -59,9 +59,9 @@
                     </label>
                 </div>
                 <div class="col-85">
-                    <input class="rowinput2" id="masukkan" type="date" placeholder="start date" name="date" value="<%= query.date %>">
+                    <input class="rowinput2" id="masukkan" type="date" placeholder="start date" name="startDate" value="<%= query.startDate %>">
                     <p class="date2">to</p>
-                    <input class="rowinput2" id="masukkan" type="date" placeholder="end date" name="end-date" value="<%= query.date %>">
+                    <input class="rowinput2" id="masukkan" type="date" placeholder="end date" name="endDate" value="<%= query.endDate %>">
                 </div>
 
                 <div class="col-15" >
